syntax = "proto3";

message Options {
    bool has_number = 1;
    bool has_uppercase = 2;
    bool has_lowercase = 3;
    bool has_symbols = 4;
}

message GenPasswordRequest {
    int32 length = 1;
    Options options = 2;
}

message GenPasswordResponse {
    string password = 1;
}

service PasswordGenerator{
    rpc GeneneratePassword (GenPasswordRequest) returns (GenPasswordResponse);
}